EB-5575 Condensed View CSS Changes fix "Mil / Mfg. Item" spacing (from Glenna)

--- a/src/WebChannel/main/webapp/xpedx/css/theme/CATALOG.css
+++ b/src/WebChannel/main/webapp/xpedx/css/theme/CATALOG.css
@@ -1371,9 +1371,7 @@ img#youtube { margin-right: 9px; }
 }
 
 .condensed-view  #item-ct dd .mill-mfg {
-	position: absolute;
-	top: 220px;
-	left: 10px;
+	margin-top: 6px;
 }
 .condensed-view .order-input select {
 	width: 107px;
